--- a/ThePriceIsAName.csproj
+++ b/ThePriceIsAName.csproj
@@ -23,6 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <NoWarn>IDE0003</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -53,6 +54,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Mesh.cs" />
+    <Compile Include="MeshGeometry3DExtensions.cs" />
+    <Compile Include="PolarGridMesh.cs" />
+    <Compile Include="Torus.cs" />
+    <Compile Include="PolarGridCanvas.cs" />
+    <Compile Include="PolarGridPage.xaml.cs">
+      <DependentUpon>PolarGridPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="PolarMultiplicationPage.xaml.cs">
       <DependentUpon>PolarMultiplicationPage.xaml</DependentUpon>
     </Compile>
@@ -68,6 +77,10 @@
       <DependentUpon>TranslatablePage.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="PolarGridPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="PolarMultiplicationPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
